germany, merge in some focuses from darths branch

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -664,13 +664,13 @@
  GER_bohemia_autobahn:0 "Berlin-Prague Autobahn Extension"
  GER_bohemia_autobahn_tt:0 "Sets level 9 §YInfrastructure§! along the route."
  GER_bohemia_autobahn_desc:0 "Since its inception in 1933, the autobahn project has been a glorious success. The construction efforts have reduced unemployment, and the wide roads stand as a monument to German economic recovery. The route from Berlin to Prague will help integrate the two large industrial areas."
- GER_Goering_Plan:0 "Goering's Four Year Plan"
- GER_Goering_Plan_desc:0 "The Four Year Plan was an economic initiative which Hitler started. It involved, amongst other things, reducing unemployment and undertaking public works projects such as the German Autobahnen. Hermann Goering was chosen to see the plan brought into action."
+ GER_Goering_Plan:0 "The Four Year Plan"
+ GER_Goering_Plan_desc:0 "The Four Year Plan was an economic initiative which Hitler started. It involved, amongst other things, reducing unemployment and undertaking public works projects such as the German Autobahnen. Hermann Goering can be chosen to enforce the plan rigorously or Hjalmar Schacht can be chosen to losen control of the economy a bit."
  GER_reichsarbeitsdienst:0 "Reichsarbeitsdienst"
  GER_reichsarbeitsdienst_desc:0 "The Reichsarbeitsdienst was an Organisation in which young men and later women worked for the nation. We can decide to send them to factories or to build up our country! It also will help when they later become soldiers because they will need less training!"
  GER_reichsarbeitsdienst_I:0 "Expanded Reichsarbeitsdienst"
  GER_reichsarbeitsdienst_I_desc:0 "Now that we control so much of Europe, we can expand the Reichsarbeitsdienst and get much more people to work for our glorious nation."
- GER_reichsarbeitsdienst_I_tt:0 "This will improve your Reichsarbeitsdienst National Spirit."
+ GER_reichsarbeitsdienst_I_tt:0 "This will §Gimprove§! your §YReichsarbeitsdienst National Spirit.§!"
  GER_expand_cooperation_between_military_and_civilian_industry:0 "Expand Cooperation Between Military and Civilian Industry"
  GER_expand_cooperation_between_military_and_civilian_industry_desc:0 "Cooperation between our armament industry and our civilian industry can increase efficiency and help them find synergies. This idea comes from a General named Georg Thomas who was leading the armament department of the Wehrmacht for some time."
  GER_organisation_todt:0 "Organisation Todt"
@@ -784,8 +784,6 @@
 
  GER_flaktower:0 "Flaktowers"
  GER_flaktower_desc:0 "Flaktowers were permanent fortresses constructed in majors cities as an emergency war measure to counter the raids by large strategic bomber formations. They were often constructed on the roofs of large buildings."
- GER_naval_attack_bomber:0 "Naval Patrol"
- GER_naval_attack_bomber_desc:0 ""
  GER_tactical_air_effort:0 "Kampgeschwader"
  GER_tactical_air_effort_desc:0 "The era is past when armies could win wars without looking to the skies. We must develop our bombers to provide our soldiers with air support and strike the enemy far beyond the battlefield."
  GER_tactical_air_effort_2:0 "Blitz Bomber"
@@ -1068,16 +1066,25 @@
  mobile_defense_bonus:0 "Mobile Defense Bonus"
  GER_try_to_use_anti_air_as_anti_tank_weapon:0 "Multi-Purpose Guns"
  GER_try_to_use_anti_air_as_anti_tank_weapon_desc:0 "The Flak 88 can fill both anti-air and anti-tank roles. German gunners in both field artillery and anti-aircraft units are trained in how to engage tanks, their guns equipped with the sights to do so, and (especially in the case of the Flak 88) they have the armour-piercing rounds to do so."
- GER_anti_air_as_anti_tank_weapon_effect:0 "Enables §HUse Anti-Air on Tanks§!\nMotorized Heavy Anti-Air :\n	Piercing: §G+15%§!\n	Hard Attack: §G+10%§!\n		Air Attack: §G-10%§!\n"
+ GER_anti_air_as_anti_tank_weapon_effect:0 "Enables §HUse Anti-Air on Tanks§!\n§HMotorized Heavy Anti-Air:§!\nPiercing: §G+15%§!\n	Hard Attack: §G+10%§!\n		Air Attack: §G-10%§!\n"
  GER_anti_air_as_anti_tank_weapon_effect_create_variant:0 "This will also create a variant greatly improving the Piercing of the heavy AA equipment!"
  anti_air_as_anti_tank_weapon:0 "Use Anti-Air on Tanks"
  anti_air_as_anti_tank_weapon_desc:0 "By using a our Heavy Anti-Air Guns we can pierce heavy enemy Tanks!"
  GER_bewegungskrieg:0 "Bewegungskrieg"
  GER_bewegungskrieg_desc:0 "“Bewegungskrieg”, or “lightning war”, advocates the usage of highly-concentrated mobile firepower that can exploit breakthroughs and quickly conduct full combined arms operation deep into enemy territory. We should move to quickly adopt this revolutionary doctrine since the painful memories of sluggish trench warfare from the Weltkrieg are still fresh on the minds of our people and the Oberkommando der Wehrmacht."
+ GER_stellungskrieg:0 "Stellungskrieg"
+ GER_stellungskrieg_desc:0 "“Bewegungskrieg”, or “static war”, advocates the usage of highly-concentrated firepower that can exploit the enemies weaknesses and pushes them back on the whole front!"
  GER_auftragstaktik:0 "Auftragstaktik"
- GER_auftragstaktik_desc:0 "Heinz Guderian and other radical theorists are pushing for daring new doctrines emphasizing communication, identification of 'schwerpunkte' and local concentrations of combined arms forces. Giving them free reins might help avoid the meat grinder horrors of the Great War."
- GER_befehlstaktik:0 "Ritter von Leeb"
- GER_befehlstaktik_desc:0 ""
+ GER_auftragstaktik_desc:0 "“Auftragstaktik”, or “mission tactic” is a new radical idea where subordinate leaders are given the planning initiative and freedom in execution of a mission. This cuts out the higher leadership from managing the tactical details but allows a high degree of flexibility at the operational and tactical levels of command. Some argue that this defiles the god-given right by our noblemen in the higher ranks who possess the superior knowledge."
+ GER_auftragstaktik_tt:0 "You will receive the §YTank Radio Tech§! if you have completed §GBewegungskrieg§!\nYou will receive §YDivisional HQ Radio Tech§! if you have completed §GStellungskrieg§!\nIf you have the §Yaccording technology§! already researched you will receive a §Ytech bonus§! for electronics instead!"
+ GER_befehls_ordnung:0 "Befehlsordnung"
+ GER_befehls_ordnung_desc:0 "“Befehlsordnung”, or “chain of command” emphasize organization and strict control throughout the military hierarchy. All orders have to pass all levels of command to make sure all details and circumstances are taken into account before a plan is formed or let alone set in motion."
+ GER_mechanized_offensive:0 "Mechanized Offensive"
+ GER_mechanized_offensive_desc:0 ""
+ GER_improved_ground_air_coordination:0 "Improved Ground Air Coordination"
+ GER_improved_ground_air_coordination_desc:0 ""
+ GER_terrortaktiken:0 "Terrortaktiken"
+ GER_terrortaktiken_desc:0 ""
  GER_gebirgs:0 "Gebirgsjäger"
  GER_gebirgs_desc:0 "Gebirgsjäger are the light infantry part of the alpine or mountain troops of Germany, Austria and Switzerland."
  GER_nachtjaeger:0 "Nachtgefecht"
@@ -1121,7 +1128,9 @@
  GER_Wehrmacht_desc:0 "The Treaty of Versailles once limited the German army to a mere 100,000 men, but we have covertly circumvented this limit for over a decade. In 1935, Hitler openly announced that the Reich would reintroduce conscription and quintuple the size of its army. To shed the memory of the weak Reichswehr of the Weimar period, this grand military force was christened with a new name - the Wehrmacht."
 
  GER_achtung_panzer:0 "Achtung Panzer!"
- GER_achtung_panzer_desc:0 ""Achtung - Panzer!" is a book written by Heinz Guderian. Evaluating the development and use of the first tanks during the Great War, Guderian argues that traditional cavalry should be replaced with mechanised infantry, and that the use of armored vehicles will play a key role in the use of "mobile" warfare tactics."
+ GER_achtung_panzer_desc:0 ""Achtung - Panzer!" is a book written by Heinz Guderian. Evaluating the development and use of the first tanks during the Great War. He argues that local concentrations of combined arms forces with key being the mobility of all components: the tanks, artilley and infantry while emphasizing communication and identification of 'schwerpunkte' can bring a new era of mobile warfare. Giving him free reins might help avoid the meat grinder horrors of the Great War."
+ GER_die_abwehr_von_leeb:0 "Die Abwehr!"
+ GER_die_abwehr_von_leeb_desc:0 "Die Abwehr! is a book written by Wilhelm Ritter von Leeb. Evaluating the Experience gained in the Great War, von Leeb argues that the only way to win in trench warfare is the superior use of concentrated artillery attacks in Coordination with the Luftwaffe."
  GER_Schutzstaffel_focus:0 "Schutzstaffel"
  GER_Schutzstaffel_focus_desc:0 "The Schutzstaffel, or "SS", is a paramilitary group that directly serves Adolf Hitler and the Nazi Party. What began as a simple security detachment for NSDAP meetings has grown under the leadership of Heinrich Himmler into a powerful and feared tool for Hitler's totalitarian regime.  *** Pick Himmler as a minister to further expand the SS and recruit elite combat formations."
  GER_Schutzstaffel_focus_2:0 "Schutzstaffel Expansion"
@@ -1169,8 +1178,8 @@
  GER_reform_luftwaffe_desc:0 "Dissatisfied with Hermann Göring's leadership of the Luftwaffe, Adolf Hitler wanted to replace him with Robert Ritter von Greim or Werner Kreipe."
  GER_divebomber_focus_improvement:0 "Sturzkampfgeschwader"
  GER_divebomber_focus_improvement_desc:0 "With the experience from the ongoing dive bombing, we can make it more efficient, but we have to put effort in to it!"
- GER_antitank_aircraft_improvement:0 "Schlachtgeschwader"
- GER_antitank_aircraft_improvement_desc:0 "If we give them the right weapons we can use aircraft against enemy tanks!"
+ GER_antitank_aircraft_improvement:0 "Versatile Airforce"
+ GER_antitank_aircraft_improvement_desc:0 "Our airplanes are needed in auxiliary roles to help with logistics and reconnaissance."
  GER_air_innovation:0 "Luftwaffe"
  GER_air_innovation_desc:0 "The unjust Treaty of Versailles completely forbade Germany from having an air force, but German pilots continued to train in secret. In 1935, all pretenses of obeying the Treaty were dropped and the German Reich proudly announced the official establishment of the new German Air Force, the Luftwaffe; with this being done we must continue to do everything we can to develop it."
  GER_air_innovation_2:0 "Luftwaffe Expansion"
@@ -1183,14 +1192,14 @@
 
  GER_antitank_aircraft:0 "Henschel"
  GER_antitank_aircraft_desc:0 "After the experience of spain we should consider to give the close air support better armored planes!"
- GER_naval_air_doc:0 "Träger-Stukagruppe"
+ GER_naval_air_doc:0 "Torpedo-Tactics"
  GER_naval_air_doc_desc:0 "The efficacy of air strikes against naval targets was demonstrated by the Americans already back in 1921. We should not neglect this branch of the Air Force if we intend to wage war on a naval power."
- GER_naval_bomber:0 "Küstenflieger-geschwader"
- GER_naval_bomber_desc:0 "The efficacy of air strikes against naval targets was demonstrated by the Americans already back in 1921. We should not neglect this branch of the Air Force if we intend to wage war on a naval power."
- GER_naval_patrol:0 "Naval Patrol Bombers"
- GER_naval_patrol_desc:0 "The Luftwaffe initially used aircraft to support the Kriegsmarine, making great loops out across the North Sea and, following the fall of France, the Atlantic Ocean. Aircraft were used for maritime patrols and reconnaissance, searching for Allied convoys and warships that could be reported for targeting by U-boats. Winston Churchill called these patrol aircraft the "Scourge of the Atlantic" during the Battle of the Atlantic due to its contribution to the heavy Allied shipping losses."
+ GER_naval_patrol:0 "Küstenfliegergeschwader"
+ GER_naval_patrol_desc:0 "The efficacy of air strikes against naval targets was demonstrated by the Americans already back in 1921. We should not neglect this branch of the Air Force if we intend to wage war on a naval power."
+ GER_naval_attack_bomber:0 "Träger-Stukagruppe"
+ GER_naval_attack_bomber_desc:0 "The Luftwaffe initially used aircraft to support the Kriegsmarine, making great loops out across the North Sea and, following the fall of France, the Atlantic Ocean. Aircraft were used for maritime patrols and reconnaissance, searching for Allied convoys and warships that could be reported for targeting by U-boats. Winston Churchill called these patrol aircraft the "Scourge of the Atlantic" during the Battle of the Atlantic due to its contribution to the heavy Allied shipping losses."
  GER_naval_bomber_2:0 "Naval Bomber Designs"
- GER_naval_bomber_2_desc:0 ""
+ GER_naval_bomber_2_desc:0 "The Luftwaffe initially used aircraft to support the Kriegsmarine, making great loops out across the North Sea and, following the fall of France, the Atlantic Ocean. Aircraft were used for maritime patrols and reconnaissance, searching for Allied convoys and warships that could be reported for targeting by U-boats. Winston Churchill called these patrol aircraft the "Scourge of the Atlantic" during the Battle of the Atlantic due to its contribution to the heavy Allied shipping losses."
  GER_levelbomber_focus:0 "Level Bombing"
  GER_levelbomber_focus_desc:0 "The era is past when armies could win wars without looking to the skies. We must develop our tactical bombers to provide our soldiers with the air support they need."
  GER_divebomber_focus:0 "Junkers"
