--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -1120,12 +1120,16 @@
  GER_wunderwaffe_panzer_2_desc:0 "Although the heavy designs have given our engineers new headaches in terms of extreme wear on drivetrain components the Fuhrer envisions a tipping point were the armor becomes strong enough to make the tank invincible on the battlefield!"
  GER_Panzer_division:0 "Panzer-Division"
  GER_Panzer_division_desc:0 "The old "Leichte Divisions" have proven too thin-skinned to do their jobs as armor, but not maneuverable enough to fully replace cavalry. The next generation of tanks must have tougher armor and more powerful armaments, even if there is a slight cost in speed."
- GER_Panzer_Division_1937_unit_tt:0 "Gain a template with §Y4 Light Armor§! and §Y2 Medium Armor§! and §Y5 Motorized§! and §Y1 Armored Car§!  and §Y2 Motorized Artillery§! and §Y1 Motorized Anti-Tank§! battalions.\n"
+ GER_Panzer_Division_1937_unit_tt:0 "Gain a fresh division with §Y2 Light Armor§!, §Y2 Medium Armor§!, §Y5 Motorized§!, §Y1 Armored Car§!, §Y2 Motorized Artillery§! and §Y1 Motorized Anti-Tank§! battalions.\n"
  GER_liecht_division:0 "Leichte Division"
  GER_liecht_division_desc:0 "In theory, it is possible for divisions with fast, lightly-armored vehicles to replace obsolete cavalry units. We just need to develop the required vehicles first..."
  GER_Leichte_Pz_Division_unit_tt:0 "Gain a fresh division with §Y4 Light Armor§!, §Y4 Motorized§!, §Y3 Motorized Artillery§! and §Y1 Motorized Anti-Tank§! battalions.\n"
+ GER_Panzer_corps:0 "Panzer-Corps"
+ GER_Panzer_corps_desc:0 "Panzer corps are the main strike force of the Wehrmacht, and consists of roughly 5 motorised infantry divisions and panzer divisions, enough for large breakthrough operations beyond the enemy lines."
  GER_Wehrmacht:0 "Wehrmacht"
  GER_Wehrmacht_desc:0 "The Treaty of Versailles once limited the German army to a mere 100,000 men, but we have covertly circumvented this limit for over a decade. In 1935, Hitler openly announced that the Reich would reintroduce conscription and quintuple the size of its army. To shed the memory of the weak Reichswehr of the Weimar period, this grand military force was christened with a new name - the Wehrmacht."
+ GER_pioneer:0 "Prioneer Corps"
+ GER_pioneer_desc:0 ""
 
  GER_achtung_panzer:0 "Achtung Panzer!"
  GER_achtung_panzer_desc:0 ""Achtung - Panzer!" is a book written by Heinz Guderian. Evaluating the development and use of the first tanks during the Great War. He argues that local concentrations of combined arms forces with key being the mobility of all components: the tanks, artilley and infantry while emphasizing communication and identification of 'schwerpunkte' can bring a new era of mobile warfare. Giving him free reins might help avoid the meat grinder horrors of the Great War."
