Germany update mainly

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -1050,6 +1050,8 @@
  GER_kampfgruppes_desc:0 "Our experience shows that combined-arms warfare is the way of the future. If we apply the Prussian doctrine of mission command to combined-arms warfare, our military can increase efficiency and effectiveness by forming "Kampfgruppes", ad hoc military formations designed to complete a specific task."
  GER_artillery_expansion:0 "Artillerie Expansion"
  GER_artillery_expansion_desc:0 "The Treaty of Versailles sought to limit Germany's field artillery to just 284 pieces in total, but this laughable restriction is no obstacle to the Reich now. A powerful Germany needs a powerful Heer, and a powerful Heer needs powerful guns!"
+ GER_equipment_modernization:0 "Equipment Modernization"
+ GER_equipment_modernization_desc:0 "Bolt-action rifles and hand grenades have now became antiquated. Our infantry needs better firepower in terms of semi-automatic rifles and grenade-launchers."
  GER_infanterie_tactics:0 "Infanterie Tactics"
  GER_infanterie_tactics_desc:0 "Infantry tactics have come a long way since the Great War. If we apply the General Staff's recent advancements in military thought to real-life experiences, the backbone of the Wehrmacht may become more unshakable than ever before."
  GER_Heer_expansion:0 "Form the Volkssturm"
@@ -1140,6 +1142,9 @@
  GER_Schutzstaffel_focus_2:0 "Schutzstaffel Expansion"
  GER_Schutzstaffel_focus_2_desc:0 "The SS organisation can be further expanded with foreign recruitments of ideological warriors."
  unlock_expanded_ss:0 "Unlock foreign SS Division recruitment decisions\n"
+ GER_Schutzstaffel_focus_3:0 "SS Panzer Divisions"
+ GER_Schutzstaffel_focus_3_desc:0 "The SS organisation can be further expanded by prioritizing the top armored equipment to their units."
+ unlock_panzer_ss:0 "Unlock SS Panzer Division recruitment decisions\n"
  GER_Bandenkampf:0 "Bandenkampf"
  GER_Bandenkampf_desc:0 "We need units that focus on fighting the resistance in the countries we control now!"
  GER_historical_Schutzstaffel:0 "Historical SS"
