--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -495,8 +495,16 @@
  ferdinand_schorner_desc:0 "Ferdinand Schörner is skilled in Defense and fighting in cold weather conditions."
  general_staff:0 "General Staff"
  general_staff_desc:0 "The German General staff was responsible for the continuous study of all aspects of war, including the drawing up and reviewing of plans for mobilization or campaign. This contributed to a higher level of Organization in the army."
+ ordnung_general_staff:0 "General Staff"
+ ordnung_general_staff_desc:0 "The German General staff was responsible for the continuous study of all aspects of war, including the drawing up and reviewing of plans for mobilization or campaign. This contributed to a higher level of Organization in the army."
+ auftrag_general_staff:0 "General Staff"
+ auftrag_general_staff_desc:0 "The German General staff was responsible for the continuous study of all aspects of war, including the drawing up and reviewing of plans for mobilization or campaign. This contributed to a higher level of Organization in the army."
  improved_general_staff:0 "Improved General Staff"
  improved_general_staff_desc:0 "The German General staff was responsible for the continuous study of all aspects of war, including the drawing up and reviewing of plans for mobilization or campaign. This contributed to a higher level of Organization in the army."
+ improved_ordnung_general_staff:0 "Improved General Staff"
+ improved_ordnung_general_staff_desc:0 "The German General staff was responsible for the continuous study of all aspects of war, including the drawing up and reviewing of plans for mobilization or campaign. This contributed to a higher level of Organization in the army."
+ improved_auftrag_general_staff:0 "Improved General Staff"
+ improved_auftrag_general_staff_desc:0 "The German General staff was responsible for the continuous study of all aspects of war, including the drawing up and reviewing of plans for mobilization or campaign. This contributed to a higher level of Organization in the army."
  Waffen_SS:0 "Waffen SS"
  Waffen_SS_desc:0 "The armed wing of the NSDAP Party's Schutzstaffel. Its military formations included men from Nazi Germany, along with volunteers and conscripts from both occupied and un-occupied lands"
  sealion:0 "Sealion"
