reset usa changes ubtil they can be tested

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -129,8 +129,8 @@
  HUN_synthetic_research_desc:0 "Developing Synthetic oil will put us less at risk of losing our Oil supply and will make us self autonomous"
  
  
- USA_3LA:0 "Establish the 3 Letter Agencies"
- USA_3LA_desc:0 "The 3 Letter Agencies will be part of the Presidents new plan to address the Depression.  These will cover all parts of life, and hopefully address the problems American people are facing with the Great Depression."
+ USA_erf:0 "Emergency Relief Appropriation Act"
+ USA_erf_desc:0 "The 1935 Relief Appropriation Act was passed as part of FDR's Second New Deal.  It was the largest public-assistance relief program in American history, employing a total of 3.5 million people, and was the single largest accumulation of debt as well, a total of 4.8 billion USD.  FDR hoped this would end the Great Depression once and for all!  He was wrong, and this was generally unsuccessful."
  USA_public_works:0 "Public Works Administration"
  USA_public_works_desc:0 "The PWA was created by the National Industrial Recovery Act in response to the Great Depression.  It built infrastructure such as The Hoover Dam, a bridge connecting Key West, Florida, to the mainland, and a 1.5 mile long tunnel under the Hudson River in New York City, rivaling the WPA in its endeavor to make the best infrastructure in America.  However, the PWA is better because it later built the Aircraft Carriers Yorktown and Enterprise, which sunk 4 Japanese Carriers at the Battle of Midway.  Take that WPA!"
  USA_national_youth:0 "National Youth Administration"
@@ -2340,8 +2340,8 @@ USA_pacific_basing:0 "Pacific Basing"
 USA_pacific_basing_desc:0 "To project our force in the west pacific we need large naval bases that can support our main task forces!"
 USA_ccc:0 "Civilian Conservation Corps"
 USA_ccc_desc:0 "Unemployed young Americans need a reason to get up every morning. The Civilian Conservation Corps will enlist young men to construct the infrastructure the nation needs."
-USA_NIRA:0 "National Industrial Recovery Act"
-USA_NIRA_desc:0 "The Hoover Damn was a 5 year construction project across the Colorado River to provide power for ~1.3 million homes in the Nevada-Arizona area.  The construction process involved 4 underwater diversion tunnels, 112 deaths, and building 2 clocks that only show the same time for 6 months of the year.  From this, we can surely learn a thing or two about better construction techniques!"
+USA_finish_hoover_dam:0 "Finish the Hoover Dam"
+USA_finish_hoover_dam_desc:0 "The Hoover Damn was a 5 year construction project across the Colorado River to provide power for ~1.3 million homes in the Nevada-Arizona area.  The construction process involved 4 underwater diversion tunnels, 112 deaths, and building 2 clocks that only show the same time for 6 months of the year.  From this, we can surely learn a thing or two about better construction techniques!"
 USA_help_farmers:0 "Resettlement Administration"
 USA_help_farmers_desc:0 "We must create the Resettlement administration to relocate struggling rural and urban families to communities planned directly by us."
 USA_fsa:0 "Farm Security Administration"
