--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -703,6 +703,8 @@
  GER_west_wall_Hv_desc:0 "The Westwall runs parallel to France's vaunted Maginot Line, occupying much of the same ground as the Siegfried Line did in the previous Weltkrieg. Fortifying its defenses will allow us to hold the border with fewer men, freeing up divisions to participate in any potential eastern campaigns."
  GER_west_wall_Hv_tt:0 "§RIf the Rhineland is remilitarized, you will also gain:§!\n"
  GER_west_wall_Hv_forts:0 "Add §Y12 Land Forts§! on the French border.\n"
+ GER_fort_preusen:0 "Festung Preussen"
+ GER_fort_preusen_desc:0 "Our eastern frontiers had several key fortifications constructed in the 1700s that can form as the foundation for a strong defensive line."
  GER_expand_austrian_oil:0 "Expand the Austrian Oil"
  GER_expand_austrian_oil_desc:0 "The addition of Ostmark (Austria) to the Reich affords us a new opportunity to fuel our nation."
  GER_industrial_effort_36:0 "1936 Industrial Effort"
@@ -1130,8 +1132,8 @@
  GER_Panzer_corps_desc:0 "Panzer corps are the main strike force of the Wehrmacht, and consists of roughly 5 motorised infantry divisions and panzer divisions, enough for large breakthrough operations beyond the enemy lines."
  GER_Wehrmacht:0 "Wehrmacht"
  GER_Wehrmacht_desc:0 "The Treaty of Versailles once limited the German army to a mere 100,000 men, but we have covertly circumvented this limit for over a decade. In 1935, Hitler openly announced that the Reich would reintroduce conscription and quintuple the size of its army. To shed the memory of the weak Reichswehr of the Weimar period, this grand military force was christened with a new name - the Wehrmacht."
- GER_pioneer:0 "Prioneer Corps"
- GER_pioneer_desc:0 ""
+ GER_pioneer:0 "Pioneer Corps"
+ GER_pioneer_desc:0 "The crucial tasks of the engineers will pave the way for our future operations."
 
  GER_achtung_panzer:0 "Achtung Panzer!"
  GER_achtung_panzer_desc:0 ""Achtung - Panzer!" is a book written by Heinz Guderian. Evaluating the development and use of the first tanks during the Great War. He argues that local concentrations of combined arms forces with key being the mobility of all components: the tanks, artilley and infantry while emphasizing communication and identification of 'schwerpunkte' can bring a new era of mobile warfare. Giving him free reins might help avoid the meat grinder horrors of the Great War."
