--- a/bicemodded/localisation/english/effects_l_english.yml
+++ b/bicemodded/localisation/english/effects_l_english.yml
@@ -186,7 +186,14 @@
  EFFECT_ADD_EXTRA_STATE_SHARED_BUILDING_SLOTS:0 "Add $COUNT|G$ Building Slots."
  EFFECT_REMOVE_EXTRA_STATE_SHARED_BUILDING_SLOTS:0 "Remove $COUNT|R$ Building Slots."
  EFFECT_ADD_TO_WAR:0 "Joins $COUNTRY1|Y$ in their war against $COUNTRY2|Y$.\n"
- EFFECT_CREATE_EQUIPMENT_VARIANT:0 "Create a variant of $PARENT|Y$: $NAME|Y$.\n"
+ EFFECT_CREATE_EQUIPMENT_VARIANT:1 "Create $NAME|Y$ $ROLE$ variant based on $TYPE$.\n"
+ EFFECT_CREATE_EQUIPMENT_VARIANT_NO_NAME:0 "Create a $ROLE|Y$ variant based on $TYPE$.\n"
+ EFFECT_CREATE_EQUIPMENT_VARIANT_NO_TECH:0 "Create $NAME|Y$ $ROLE$ variant on gaining technology $TYPE|Y$.\n"
+ EFFECT_CREATE_EQUIPMENT_VARIANT_NO_TECH_NO_NAME:0 "Create a $ROLE|Y$ variant on gaining technology $TYPE|Y$.\n"
+ EFFECT_CREATE_EQUIPMENT_VARIANT_LEGACY:0 "Create variant $NAME|Y$ based on $TYPE$.\n"
+ EFFECT_CREATE_EQUIPMENT_VARIANT_LEGACY_NO_NAME:0 "Create a variant based on $TYPE|Y$.\n"
+ EFFECT_CREATE_EQUIPMENT_VARIANT_LEGACY_NO_TECH:0 "Create variant $NAME|Y$ on gaining technology $TYPE|Y$.\n"
+ EFFECT_CREATE_EQUIPMENT_VARIANT_LEGACY_NO_TECH_NO_NAME:0 "Create a variant on gaining technology $TYPE|Y$.\n"
  EFFECT_ADD_EQUIPMENT_PRODUCTION:1 "Add a production line of $EQUIPMENT|Y$.\n"
  EFFECT_ADD_ACE:0 "$NAME|Y$ '$CALLSIGN|Y$' $SURNAME|Y$ becomes a flying Ace.\n"
  NO_EFFECT:0 "Nothing happens"
