--- a/bicemodded/localisation/english/equipment_l_english.yml
+++ b/bicemodded/localisation/english/equipment_l_english.yml
@@ -1064,15 +1064,18 @@
  mechanized_equipment_3:0 "Mechanized Equipment III"
  mechanized_equipment_3_short:0 "Armored Personnel Carrier"
  mechanized_equipment_3_desc:0 "Mechanized infantry is infantry equipped with armored personnel carriers (APCs) or infantry fighting vehicles (IFVs) for transport and combat. Mechanized infantry is distinguished from motorized infantry in that its vehicles provide a degree of protection from hostile fire, as opposed to soft-skinned wheeled vehicles (trucks or jeeps) for motorized infantry."
- GER_mechanized_equipment_1:0 "Basic German Halftracks"
- GER_mechanized_equipment_1_short:0 "Sdkfz. 251 A"
- GER_mechanized_equipment_1_desc:0 "The Sdkfz. 251 (Sonderkraftfahrzeug - special motorized vehicle) was a German half-track that saw very widespread use in World War II."
+ GER_mechanized_equipment_2:0 "Basic German Halftracks"
+ GER_mechanized_equipment_2_short:0 "Sdkfz. 7"
+ GER_mechanized_equipment_2_desc:0 "The Sdkfz. 7 (Sonderkraftfahrzeug - special motorized vehicle) was a German half-track that saw very widespread use in World War II."
  GER_mechanized_equipment_2:0 "Improved German Halftracks"
- GER_mechanized_equipment_2_short:0 "Sdkfz. 251 C"
- GER_mechanized_equipment_2_desc:0 "The Sdkfz. 251 half-track was an armored fighting vehicle designed and first built by the Hanomag company during World War II."
+ GER_mechanized_equipment_2_short:0 "Sdkfz. 251 A"
+ GER_mechanized_equipment_2_desc:0 "The Sdkfz. 251 (Sonderkraftfahrzeug - special motorized vehicle) was a German half-track that saw very widespread use in World War II."
+ #GER_mechanized_equipment_2:0 "Improved German Halftracks"
+ #GER_mechanized_equipment_2_short:0 "Sdkfz. 251 C"
+ #GER_mechanized_equipment_2_desc:0 "The Sdkfz. 251 half-track was an armored fighting vehicle designed and first built by the Hanomag company during World War II."
  GER_mechanized_equipment_3:0 "Advanced German Halftracks"
  GER_mechanized_equipment_3_short:0 "Sdkfz. 251 D"
- GER_mechanized_equipment_3_desc:0 "An updated version of the Sdkfz. 251. Most build Model of the Sdkfz. 251."
+ GER_mechanized_equipment_3_desc:0 "An updated version of the Sdkfz. 251. Most built Model of the Sdkfz. 251."
  SOV_mechanized_equipment:0 "Mechanized"
  SOV_mechanized_equipment_short:0 "Mechanized"
  SOV_mechanized_equipment_desc:0 "Mechanized infantry is infantry equipped with armored personnel carriers (APCs) or infantry fighting vehicles (IFVs) for transport and combat. Mechanized infantry is distinguished from motorized infantry in that its vehicles provide a degree of protection from hostile fire, as opposed to soft-skinned wheeled vehicles (trucks or jeeps) for motorized infantry."
@@ -8299,37 +8302,37 @@ JAP_light_amph_tank_equipment_2_short:0 "Type 5 To-Ku Amph. Tank"
 JAP_light_amph_tank_equipment_2_desc:0 "The Special Type 5 Launch To-Ku was a Japanese amphibious tank built in 1945. The To-Ku was large and heavy; it boasted extensive armor protection with 50 mm of armor plate in the front hull. The turret was a modified version of the one used on the Type 97 Shinhoto Chi-Ha medium tank and fitted with a Type 1 25mm gun and a rear facing Type 97 7.7mm machine gun. The front hull mounted a Type 1 47mm L/54 tank gun and a Type 97 7.7mm machine gun. The chassis was based on the Type 5 Chi-Ri medium tank and the suspension, pontoons and propulsion system were substantially the same as the Type 3 Ka-Chi. Only one prototype was built of this amphibious tank."
 
 
-#JAP_medium_tank_equipment_1:0 "Type 89 I-Go"
-#JAP_medium_tank_equipment_1_short:0 "Type 89A I-Go Kō Med.TK"
-#JAP_medium_tank_equipment_1_desc:0 "The Type 89 I-Go (sometimes referred to as the Chi-Ro) was a medium infantry support tank designed by the Osaka Technical Arsenal from 1925 to 1929. Modeled after the Vickers Medium C, which Japan had purchased in 1927, it had a short-barrel 57mm cannon, up to 17mm of welded armor, and a top speed of 26 kph. 404 were built between 1929 and 1937 - of these, 113 were Type 89As, and the remainder were Type 89Bs, with an improved engine, armor, and gun."
+#JAP_medium_tank_equipment_0:0 "Type 89 I-Go"
+#JAP_medium_tank_equipment_0_short:0 "Type 89A I-Go Kō Med.TK"
+#JAP_medium_tank_equipment_0_desc:0 "The Type 89 I-Go (sometimes referred to as the Chi-Ro) was a medium infantry support tank designed by the Osaka Technical Arsenal from 1925 to 1929. Modeled after the Vickers Medium C, which Japan had purchased in 1927, it had a short-barrel 57mm cannon, up to 17mm of welded armor, and a top speed of 26 kph. 404 were built between 1929 and 1937 - of these, 113 were Type 89As, and the remainder were Type 89Bs, with an improved engine, armor, and gun."
 
-JAP_medium_tank_equipment_0:0 "Type 97 Chi-Ha Med.TK"
-JAP_medium_tank_equipment_0_short:0 "Type 97 Chi-Ha Med.TK"
-JAP_medium_tank_equipment_0_desc:0 "The Type 97 was Japan's primary medium tank during the war. It was originally designed as an infantry support tank, with a short-barreled, low-velocity 57mm L/10 gun. Secondary armament was two 7.7mm machine guns. It had up to 25mm of welded armor. It also was used as the base of many self propelled gun variants. Its Mitsubishi SA12200VD air-cooled V-12 diesel engine provided 170 HP and allowed the 15 ton vehicle a top road speed of 38 km/h."
+JAP_medium_tank_equipment_1:0 "Type 97 Chi-Ha Med.TK"
+JAP_medium_tank_equipment_1_short:0 "Type 97 Chi-Ha Med.TK"
+JAP_medium_tank_equipment_1_desc:0 "The Type 97 was Japan's primary medium tank during the war. It was originally designed as an infantry support tank, with a short-barreled, low-velocity 57mm L/10 gun. Secondary armament was two 7.7mm machine guns. It had up to 25mm of welded armor. It also was used as the base of many self propelled gun variants. Its Mitsubishi SA12200VD air-cooled V-12 diesel engine provided 170 HP and allowed the 15 ton vehicle a top road speed of 38 km/h."
 
 #JAP_medium_tank_equipment_3:0 "Type 97 Shinhoto Chi-Ha Med.TK"
 #JAP_medium_tank_equipment_3_short:0 "Type 97 Kai Med.TK"
 #JAP_medium_tank_equipment_3_desc:0 "The Type 97 Shinhoto Chi-Ha (or Kai) was a Type 97 Chi-Ha with an upgraded three-man 47mm gun turret. The gun was of a higher velocity than the Chi-Ha's 57mm gun, and performed much better in combat. The Type 97 Kai had frontal armor of 25mm, side of 26mm, and rear of 20mm. It had a max speed of 38 kph. 930 were built from 1942 to 1943, and an additional 300 Type 97 Chi-Ha were retrofitted with the newer 47mm tank gun."
 
-JAP_medium_tank_equipment_1:0 "Type 1 Chi-He Med.TK"
-JAP_medium_tank_equipment_1_short:0 "Type 1 Chi-He Med.TK"
-JAP_medium_tank_equipment_1_desc:0 "The Type 1 Chi-He was an improved version of the the Type 97 Chi-Ha designed to counter the M4 Sherman, which could both penetrate the Type 97's armor and shrug off shots from it. The Type 1 Chi-He was equipped with a Type 1 47mm tank gun, which had a considerable improved piercing ability over the low-velocity 57mm gun. It had an additional 70 HP on its engine, which compensated for the improved frontal armor of 50mm. It was also the first Japanese tank to carry radio as standard equipment."
+JAP_medium_tank_equipment_2:0 "Type 1 Chi-He Med.TK"
+JAP_medium_tank_equipment_2_short:0 "Type 1 Chi-He Med.TK"
+JAP_medium_tank_equipment_2_desc:0 "The Type 1 Chi-He was an improved version of the the Type 97 Chi-Ha designed to counter the M4 Sherman, which could both penetrate the Type 97's armor and shrug off shots from it. The Type 1 Chi-He was equipped with a Type 1 47mm tank gun, which had a considerable improved piercing ability over the low-velocity 57mm gun. It had an additional 70 HP on its engine, which compensated for the improved frontal armor of 50mm. It was also the first Japanese tank to carry radio as standard equipment."
 
 #JAP_medium_tank_equipment_5:0 "Type 3 Chi-Nu Med.TK"
 #JAP_medium_tank_equipment_5_short:0 "Type 3 Chi-Nu Med.TK"
 #JAP_medium_tank_equipment_5_desc:0 "The Type 3 Chi-Nu was developed as a stopgap between the Type 97 and the Type 4 Chi-To, as a tank was urgently needed to counter the M4 Sherman. The Type 3 was designed from May to October 1943, but was not put into production until 1944, owing to the low priority of Japanese tanks. It had a 75mm gun, 50mm of frontal sloped armor, and a 240 hp engine that enabled a top speed of 39 kph. 166 were built from 1944 to 1945."
 
-JAP_medium_tank_equipment_2:0 "Type 4 Chi-To Med.TK"
-JAP_medium_tank_equipment_2_short:0 "Type 4 Chi-To Med.TK"
-JAP_medium_tank_equipment_2_desc:0 "The Type 4 Chi-To was the most advanced Japanese medium tank design to reach production. It was a 30-ton, all-welded armor tank with a maximum armor thickness of 75mm. Its main armament was a turret mounted Type 5 75mm L/56,4 gun, and also had two heavy machine guns for close defense. Its 400 hp engine was considerably better than the Type 3 Chi-Nu's, giving it a top speed of 45 kph."
+JAP_medium_tank_equipment_3:0 "Type 4 Chi-To Med.TK"
+JAP_medium_tank_equipment_3_short:0 "Type 4 Chi-To Med.TK"
+JAP_medium_tank_equipment_3_desc:0 "The Type 4 Chi-To was the most advanced Japanese medium tank design to reach production. It was a 30-ton, all-welded armor tank with a maximum armor thickness of 75mm. Its main armament was a turret mounted Type 5 75mm L/56,4 gun, and also had two heavy machine guns for close defense. Its 400 hp engine was considerably better than the Type 3 Chi-Nu's, giving it a top speed of 45 kph."
 
-JAP_medium_tank_equipment_3:0 "Type 5 Chi-Ri Med.TK"
-JAP_medium_tank_equipment_3_short:0 "Type 5 Chi-Ri Med.TK"
-JAP_medium_tank_equipment_3_desc:0 "The Type 5 Chi-Ri was the final medium tank design of the IJA during the war. Based on information gained from fighting on the Eastern Front, the Army requested a new tank which then weighed 37 tons, had improved 75mm armor, and a Type 99 88mm L/45 gun. The IJA also wanted a tank which could consistently inflict high loss rates on the American M4 Sherman. With its water-cooled Kawasaki Type 98 petrol engine developing 550 HP it could reach the same top road speed of 45 km/h, despite being 7 tons heavier than the Chi-To."
+JAP_medium_tank_equipment_4:0 "Type 5 Chi-Ri Med.TK"
+JAP_medium_tank_equipment_4_short:0 "Type 5 Chi-Ri Med.TK"
+JAP_medium_tank_equipment_4_desc:0 "The Type 5 Chi-Ri was the final medium tank design of the IJA during the war. Based on information gained from fighting on the Eastern Front, the Army requested a new tank which then weighed 37 tons, had improved 75mm armor, and a Type 99 88mm L/45 gun. The IJA also wanted a tank which could consistently inflict high loss rates on the American M4 Sherman. With its water-cooled Kawasaki Type 98 petrol engine developing 550 HP it could reach the same top road speed of 45 km/h, despite being 7 tons heavier than the Chi-To."
 
-JAP_medium_tank_equipment_4:0 "Type 61"
-JAP_medium_tank_equipment_4_short:0 "Type 61"
-JAP_medium_tank_equipment_4_desc:0 "The Type 61 is a late medium tank which favoured protection over speed. It was armed with a 90mm L/52 tank gun. Its armour was favourably sloped and had a maximum of 114mm on the turret and 55mmm on the hull front. Its Mitsubishi 12HM21WT 12-cyl. air cooled diesel developed 570 HP which allowed a top road speed of 45 km/h."
+#JAP_medium_tank_equipment_4:0 "Type 61"
+#JAP_medium_tank_equipment_4_short:0 "Type 61"
+#JAP_medium_tank_equipment_4_desc:0 "The Type 61 is a late medium tank which favoured protection over speed. It was armed with a 90mm L/52 tank gun. Its armour was favourably sloped and had a maximum of 114mm on the turret and 55mmm on the hull front. Its Mitsubishi 12HM21WT 12-cyl. air cooled diesel developed 570 HP which allowed a top road speed of 45 km/h."
 
 ### medium SPG
 
