--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -2006,6 +2006,9 @@ ITA_join_axis_declare_war_tt:0 "§RIf Germany accepts, we will immediately join 
  delfim_tt:0 "Creates a Submarine III design 'Delfim 37'"
  level_up_heavy_aicraft_factory_tt:0 "§GIncrease§! §YHeavy Aircraft Factory§! technology level:"
  level_up_tank_factory_tt:0 "§GIncrease§! §YTank Factory§! technology level:"
+ level_up_vehicle_industry_tt:0 "§GIncrease§! §YVehicle Factory§! technology level:"
+ level_up_artillery_industry_tt:0 "§GIncrease§! §YArtillery Factory§! technology level:"
+ level_up_smallarms_industry_tt:0 "§GIncrease§! §YSmall Arms Factory§! technology level:"
  SOV_government_loans:0 "Issue Compulsory Government Loans"
  SOV_government_loans_desc:0 "Borrowing money from our citizens will provide direly needed cash reserves to invest in foreign business ventures."
  SOV_lessons_winter:0 "Form Headquarters of Supreme High Command"
@@ -2348,8 +2351,8 @@ USA_ccc:0 "Civilian Conservation Corps"
 USA_ccc_desc:0 "Unemployed young Americans need a reason to get up every morning. The Civilian Conservation Corps will enlist young men to construct the infrastructure the nation needs."
 USA_NIRA:0 "National Industrial Recovery Act"
 USA_NIRA_desc:0 "The Hoover Damn was a 5 year construction project across the Colorado River to provide power for ~1.3 million homes in the Nevada-Arizona area.  The construction process involved 4 underwater diversion tunnels, 112 deaths, and building 2 clocks that only show the same time for 6 months of the year.  From this, we can surely learn a thing or two about better construction techniques!"
-USA_help_farmers:0 "Resettlement Administration"
-USA_help_farmers_desc:0 "We must create the Resettlement administration to relocate struggling rural and urban families to communities planned directly by us."
+USA_help_farmers:0 "The Corn Bel"
+USA_help_farmers_desc:0 "We must subsidise corn production in the mid-west to help encourage struggling rural and urban families to move there."
 USA_fsa:0 "Farm Security Administration"
 USA_fsa_desc:0 "Many small farms can't survive in these times where everything is more expensive. Lets launch a program that will help these people!"
 USA_fair_labor_standards_act:0 "Fair Labor Standards Act"
