--- a/bicemodded/localisation/english/dod_focus_l_english.yml
+++ b/bicemodded/localisation/english/dod_focus_l_english.yml
@@ -340,9 +340,10 @@
  ROM_securitate_desc:0 "We must establish an expansive secret police organization to subdue internal threats to our new government."
  ROM_appoint_german_friendly_government:1 "Appoint Pro-Axis Government"
  ROM_appoint_german_friendly_government_desc:0 "The future of Romania hinges on good relations with the up-and-coming Fascist powers in the West. We must appoint a government that understands this reality."
- ROM_appoint_german_friendly_government_tooltip:0 "Removes §YConstitutional Guarantees§! and §YSecuritate§!\n"
- ROM_appoint_allied_friendly_government_tooltip:0 "Removes §YIron Guard§! and §YSecuritate§!\n"
- ROM_appoint_soviet_friendly_government_tooltip:0 "Removes §YConstitutional Guarantees§! and §YIron Guard§!\n"
+ ROM_appoint_german_friendly_government_tooltip:1 "Removes §YConstitutional Guarantees§!, §Y$ROM_national_christian_party_in_power$§! and §YSecuritate§!\n"
+ ROM_appoint_allied_friendly_government_tooltip:1 "Removes §YIron Guard§!, §Y$ROM_national_christian_party_in_power$§! and §YSecuritate§!\n"
+ ROM_appoint_soviet_friendly_government_tooltip:1 "Removes §YConstitutional Guarantees§!, §Y$ROM_national_christian_party_in_power$§! and §YIron Guard§!\n"
+ ROM_appoint_german_friendly_government_tooltip_ncp:0 "Removes §YConstitutional Guarantees§!, §YIron Guard§! and §YSecuritate§!\n"
  ROM_iron_guard:0 "Iron Guard"
  ROM_iron_guard_desc:0 "It is time to reconsider our policy concerning the Iron Guard. With our new government, the movement is now much more in line with our official standpoints, and could serve as an excellent tool to increase the nation's political stability."
  ROM_force_abdication:0 "Force Abdication"
