--- a/bicemodded/localisation/english/effects_l_english.yml
+++ b/bicemodded/localisation/english/effects_l_english.yml
@@ -355,9 +355,9 @@
  EFFECT_BUILD_RAILWAY_IN_STATE:0 "Build a level $LEVEL|Y$ railway in $STATE|Y$."
  EFFECT_EVERY_CHARACTER_STARTS:0 "Every character"
  EFFECT_RANDOM_CHARACTER_STARTS:0 "Random character"
- EFFECT_ADD_COUNTRY_LEADER_ROLE:0 "$NAME|Y$ becomes a member of the $IDEOLOGY|Y$ party."
- EFFECT_ADD_COUNTRY_LEADER_ROLE_PROMOTE:0 "$NAME|Y$ becomes leader for the $IDEOLOGY|Y$ party."
- EFFECT_REMOVE_COUNTRY_LEADER_ROLE:0 "$NAME|Y$ leaves the $IDEOLOGY|Y$ party."
+ EFFECT_ADD_COUNTRY_LEADER_ROLE:1 "becomes a member of the $IDEOLOGY|Y$ party."
+ EFFECT_ADD_COUNTRY_LEADER_ROLE_PROMOTE:1 "becomes leader for the $IDEOLOGY|Y$ party."
+ EFFECT_REMOVE_COUNTRY_LEADER_ROLE:1 "leaves the $IDEOLOGY|Y$ party."
  EFFECT_PARTY_LEADER_STARTS:0 "Party leader"
  EFFECT_EVERY_SUBJECT_COUNTRY_STARTS:0 "Every subject country"
  if_they_refuse_tt:0 "\n§YEffects if they refuse:§!"
