--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -5748,6 +5748,7 @@
  RAJ_industrialized_personnel:0 "Integrated Rural Workforce"
  ROM_white_squadron:0 "White Squadron"
  ROM_white_squadron_desc:0 "The White squadron is a service of air ambulances piloted exclusively by women. Merely the notion that rescue might be close at hand keeps our soldiers in high spirits."
+ ROM_national_christian_party_in_power:0 "National Christian Party"
  MAN_hoankyoku_idea:0 "Hoankyoku"
  MAN_hoankyoku_idea_desc:0 "A secretive organization dedicated to dealing with undesired elements in society."
 
