--- a/bicemodded/localisation/english/modifiers_l_english.yml
+++ b/bicemodded/localisation/english/modifiers_l_english.yml
@@ -621,6 +621,10 @@
  MODIFIER_AIR_NAV_EFFICIENCY_DESC:0 "Improved tactics for planes doing naval bombing or port strikes resulting in increased abilities."
  MODIFIER_ANNEX_COST_FACTOR:0 "Annex cost"
  MODIFIER_ANNEX_COST_FACTOR_DESC:0 "Changes the cost of annexing a country."
+ MODIFIER_PEACE_SCORE_RATIO_TRANSFERRED_TO_PLAYERS:0 "Peace score transferred to player(s)"
+ MODIFIER_PEACE_SCORE_RATIO_TRANSFERRED_TO_PLAYERS_DESC:0 "Percentage of Peace Score that AI countries will give to human player(s)"
+ MODIFIER_PEACE_SCORE_RATIO_TRANSFERRED_TO_OVERLORD:0 "Peace Score transferred to Overlord"
+ MODIFIER_PEACE_SCORE_RATIO_TRANSFERRED_TO_OVERLORD_DESC:0 "Percentage of Peace Score that puppets will give to their Overlord"
  MODIFIER_TAKE_STATES_COST_FACTOR:0 "Take states cost"
  MODIFIER_TAKE_STATES_COST_FACTOR_DESC:0 "Changes the cost of taking states from a country."
  MODIFIER_AI_BADASS_FACTOR:0 "AI Modifier: Threat receptivity"
@@ -1663,3 +1667,7 @@
  MODIFIER_GRANT_MEDAL_COST_FACTOR:0 "Grant Medal Cost"
  MODIFIER_FIELD_OFFICER_PROMOTION_PENALTY:0 "Field Officer Division Penalty"
  MODIFIER_FEMALE_DIVISIONAL_COMMANDER_CHANCE:0 "Female Divisional Commander Chance"
+ ROM_crack_down_on_extremism:0 "Crack Down on Extremism"
+ ROM_crack_down_on_extremism_desc:0 "Our political landscape has shifted strongly to the right under the King's rule. This said, extremist elements of society still hold sway over the hearts and minds of our people. We must move against these rogue actors in order to secure a more moderate future for our people."
+ ROM_national_christian_party:0 "National Christian Party"
+ ROM_national_christian_party_desc:0 "The writer Octavian Goga holds strong influence over our nation through his National Christian party. Born from influence gained as the Agrarian party, it has strong ties with rural communities. A reorganization of our cabinet could bring his influence into play in our favor."
