--- a/bicemodded/localisation/english/triggers_l_english.yml
+++ b/bicemodded/localisation/english/triggers_l_english.yml
@@ -761,6 +761,8 @@
  TRIGGER_ALL_CHARACTER_STARTS:0 "All Characters"
  TRIGGER_IS_NOT_ADVISOR:0 "Is not an advisor"
  TRIGGER_IS_ADVISOR:0 "Is an advisor"
+ TRIGGER_IS_HIRED_AS_ADVISOR:0 "Is hired as advisor"
+ TRIGGER_IS_NOT_HIRED_AS_ADVISOR:0 "Is not hired as advisor"
  TRIGGER_IS_NOT_POLITICAL_ADVISOR:0 "Is not a political advisor"
  TRIGGER_IS_POLITICAL_ADVISOR:0 "Is a political advisor"
  TRIGGER_IS_NOT_THEORIST:0 "Is not a theorist"
