--- a/bicemodded/localisation/english/game_rules_l_english.yml
+++ b/bicemodded/localisation/english/game_rules_l_english.yml
@@ -461,3 +461,13 @@
  RULE_OPTION_TUR_FASCISM_ALTERNATE_DESC: "Fevzi Çakmak shall transition Turkey into a conservative quasi-fascist dictatorship and attempt to form a faction with Italy."
  RULE_OPTION_BALKAN_ENTENTE: "Safeguard the Balkans"
  RULE_OPTION_BALKAN_ENTENTE_DESC: "Turkey will commit itself to maintaining security in the Balkans and attempt to form a faction with Greece, Romania, and Yugoslavia."
+ RULE_GROUP_PEACE_SCORE:0 "Peace Score distribution"
+ PEACE_SCORE_TO_OVERLORD:0 "Puppets to Overlord"
+ RULE_OPTION_PEACE_SCORE_TO_OVERLORD_YES_DESC:0 "Puppets give a part of their Peace Score to their Overlord. The ratio depends on their Autonomy level."
+ RULE_OPTION_PEACE_SCORE_TO_OVERLORD_NO_DESC:0 "Puppets keep all the Peace Score they earned during the war."
+ PEACE_SCORE_TO_FACTION_LEADER:0 "Faction Members to Faction Leader"
+ RULE_OPTION_PEACE_SCORE_TO_FACTION_LEADER_YES_DESC:0 "Faction Members give 10% of their Peace Score to the Faction Leader."
+ RULE_OPTION_PEACE_SCORE_TO_FACTION_LEADER_NO_DESC:0 "Faction Members keep all the Peace Score they earned during the war."
+ PEACE_SCORE_RESET_LOW_SCORES:0 "Redistribute low scores"
+ RULE_OPTION_PEACE_SCORE_RESET_LOW_SCORES_YES_DESC:0 "Winners with less than 5% of war participation give all their score to other winners.\nDoes not apply if no winner has at least 10% of war participation.\nDoes not apply to Human Players."
+ RULE_OPTION_PEACE_SCORE_RESET_LOW_SCORES_NO_DESC:0 "All winners keep all the Peace Score they earned during the war."
