--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -2377,6 +2377,8 @@ USA_support_roosevelt:0 "Support the President"
 USA_support_roosevelt_desc:0 "We can support the President as he will lead us in defending the free world! We should see the possible outcomes in any possible war."
 USA_cash_and_carry:0 "Cash and Carry"
 USA_cash_and_carry_desc:0 "The Cash and Carry Act allowed England to get Equipment from the USA, but they had to pay with cash and carry it with their own ships from America to England."
+USA_office_of_economic_warfare:0 "Office of Economic Warfare"
+USA_office_of_economic_warfare_desc:0 "The necessities of the war demand that the natural resources should not be sent abroad but instead fuel our war economy. The office of economic warfare will be tasked to supervise such transformation."
 USA_defense_department:0 "War Department"
 USA_defense_department_desc:0 "We should increase the staff and budget of our War Department."
 USA_Four_Freedoms:0 "Four Freedoms"
@@ -2513,6 +2515,10 @@ USA_unholy_alliance_desc:0 "Sometimes, we have to choose our enemies. Often, the
 USA_unholy_alliance_tt:0 "Boosts opinion and trade opinion with the Soviet Union or Germany if they are at war, siding with the defender."
 USA_limited_intervention:0 "Limited Intervention"
 USA_limited_intervention_desc:0 "It would take extraordinary aggression to draw us into a war at full force, but after the recent developments many people are freely willing to assist in conflicts abroad."
+USA_build_the_pentagon:1 "Build the Pentagon"
+USA_build_the_pentagon_desc:1 "The expansion of our military requires a new global headquarters to command it."
+USA_main_battle_tanks:1 "Main Battle Tanks"
+USA_main_battle_tanks_desc:1 "Experience in the field has clearly shown that a tank must be able to perform a large number of tasks, from infantry support to fighting enemy tanks. Designing vehicles to meet these needs allows us to streamline production."
 USA_the_giant_wakes:0 "The Giant Wakes"
 USA_the_giant_wakes_desc:0 "Nations turn to us to protect the values of democracy and liberty. The world where non-interventionist America was born no longer exists and we must adapt accordingly."
 USA_pearl_harbor_gambit:0 "Pearl Harbor Gambit"
@@ -2576,6 +2582,8 @@ USA_amphibious_operations_2:0 "Large Scale Landings"
 USA_amphibious_operations_2_desc:0 "Our forces on enemy beaches will be highly vulnerable to their armored vehicles. Thus, we need to bring our own armour to the beach!"
 USA_expand_the_USMC:0 "Expand The Marine Corps"
 USA_expand_the_USMC_desc:0 "The United States Marine Corps has been a decisive force in many past wars and may be more relevant than ever for our amphibious campaigns. Semper fidelis!"
+USA_lend_lease_act_0:0 "Lend Lease Act"
+USA_lend_lease_act_0_desc:0 "The large democracies of the world are under assault. If they lose the battle, it is only a question of time before war comes to our shores. We must do what we can to support them - even if they can not pay for the equipment immediately."
 USA_lend_lease_act:0 "Extend Lend Lease Act"
 USA_lend_lease_act_desc:0 "The Lend-Lease Act authorized the president to transfer arms or any other defense materials for which Congress appropriated money to “the government of any country whose defense the President deems vital to the defense of the United States.” By allowing the transfer of supplies without compensation, the act permitted the United States to support its war interests without being overextended in battle. The Soviet Union will be added to the bill by this focus. This was highly controversial as the bill will in theory allow the Soviet Union to borrow the USS Texas for free."
 USA_lend_lease_act_planes:0 "Lend lease planes"
