purge unused traits

--- a/bicemodded/localisation/english/traits_l_english.yml
+++ b/bicemodded/localisation/english/traits_l_english.yml
@@ -92,6 +92,9 @@
  blitzkrieg_theorist:0 "Blitzkrieg Theorist"
  council_of_theorists:0 "Council of Theorists"
  military_theorist:0 "Military Theorist"
+ military_theorist_2:0 "Military Theorist"
+ military_theorist_3:0 "Military Theorist"
+ air_warfare_theorist:0 "Air Warfare Theorist"
  air_warfare_theorist:0 "Air Warfare Theorist"
  dive_bomber:0 "Dive Bombing Theorist"
  carpet_bomber:0 "Carpet Bombing Theorist"
