--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -2661,12 +2661,16 @@ USA_skip_bombing:0 "Skip-Bombing"
 USA_skip_bombing_desc:0 "Bouncing bombs over water could be key to striking decisive blows to enemy vessels."
 USA_social_security:0 "Social Security Act"
 USA_social_security_desc:0 "In 1935, Franklin Delano Roosevelt signed into law the Social Security Act, creating a safety net for the elderly, unemployed, and disadvantaged of America.  Within 4 months, ~26 million people would be enrolled in the program."
+USA_universal:0 "Universal Social Security Act"
+USA_universal_desc:0 "In 1935, Franklin Delano Roosevelt signed into law the Social Security Act, creating a safety net for the elderly, unemployed, and disadvantaged of America.  Within 4 months, ~26 million people would be enrolled in the program."
 USA_bonus_bill:0 "Bonus Bill"
 USA_bonus_bill_desc:0 "A bill was introduced in 1924 to provide US Treasury Bonds to veterans from the Great War. At a rate of at least $1 per day of service, this will be costly.  However, many of these bonds cant be redeemed until 1945 so it will not hurt the economy now, but it should be very popular!"
 USA_rural_electrification_act:0 "Rural Electrification Act"
 USA_rural_electrification_act_desc:0 "The Rural Electrification Act provided federal loans for the purpose of bringing electricity to rural areas, an idea before considered unfeasible due to the range of powerlines only being 4 miles.  With these loans, that distance was increased to 40 miles, allowing thousands of homes to see the light quite literally!"
 USA_tennessee_valley_authority:0 "Tennessee Valley Authority"
 USA_tennessee_valley_authority_desc:0 "The TVA was established to provide infrastructure to an area that was largely neglected due to the Great Depression.  This included the constuction of the first and largest federal hydropower agencies in the country, which was later used to produce ~5 million tons of aluminum and many of the components for the Manhatten Project for the war effort."
+USA_develop_texas:0 "Everything is Bigger in Texas"
+USA_develop_texas_desc:0 "The saying that everything is bigger in Texas as a reference to the enormity of the state's geographical area. In terms of square miles, Texas is second only to Alaska in size and has vast fertile grounds, oil deposits and coal mines. The ideal place for industrial and agricultural expansion!"
 USA_aaa:0 "Agricultural Adjustments Act"
 USA_aaa_desc:0 "We need to create this agency to promote Rural Electrification, in Europe Germany and France have over 90% farms with electricity, we're falling behind!"
 USA_beast_america:0 "Industrial Mobilization"
